--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,98 @@
-/* Adiciona a barra de pesquisa */
-.barra-pesquisa {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  gap: 10px;
+/* Padrão */
+
+.container-fluid {
+  margin: 0;
+  padding: 0;
+  font-family: Arial;
+  box-sizing:border-box;
+  background-color: #fbefd8;
 }
 
-.barra-pesquisa input {
-  width: 300px;
-  padding: 10px;
-  border-radius: 5px;
-  border: none;
+h1,
+h2,
+h3 {
+  color: #333;
 }
 
-.barra-pesquisa button {
-  padding: 10px 15px;
-  background-color: #ffffff33;
-  border: 1px solid white;
-  color: white;
-  border-radius: 5px;
-  cursor: pointer;
+p {
+  color: #70747a;
 }
 
-.barra-pesquisa button:hover {
-  background-color: #ffffff55;
+/* Barra de navegação */
+
+.navbar-container {
+  width: 100%;
+  height: 80px;
+  background-color: #1f2723;
+  padding: 0 2rem;
 }
 
-/* Layout principal com sidebar */
-main {
-  display: flex;
-  padding: 40px 20px;
-  gap: 40px;
+nav {
+  position: relative;
 }
 
-/* Categorias (sidebar) */
-.categorias {
-  width: 200px;
+.logo {
+  width: 60px;
+  margin-top: 10px;
 }
 
-.categorias h3 {
-  margin-bottom: 10px;
-  font-size: 1.2em;
+.navbar-i {
+  position: absolute;
+  right: 0;
+  height: 80px;
+  line-height: 80px;
+  margin: 0;
+  display: inline-block;
+
 }
 
-.categorias ul {
-  list-style: none;
-  padding-left: 0;
+.navbar-i li {
+  display:inline-block;
+  margin-left: 25px;
+
 }
 
-.categorias li {
-  margin-bottom: 10px;
-}
-
-.categorias a {
+.navbar-i a {
+  color: #fff;
   text-decoration: none;
-  color: #6200ea;
+  transition: 0.5s;
 }
 
-.categorias a:hover {
-  text-decoration: underline;
+.navbar-i a:hover {
+  color:bisque;
 }
 
-/* Livros (grade de produtos) */
-.livros {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
-  flex: 1;
+.btn-entrar {
+  padding: 15px 20px;
+  background-color: rgb(85, 102, 96);
+  border-radius: 5px;
+}
+
+/* banner */
+
+.banner {
+  background-image: url("../img/banne.png");
+  padding: 10rem 0;
+  background-position: center;
+  background-size: cover;
+}
+
+.banner h1, .banner p {
+  color:#fff;
+  text-align: center;
+  font-weight: bold;
+}
+
+
+/* Livros */
+
+.books-container {
+  padding: 5rem 0;
+}
+
+.books-container ul {
+  display:flex;
+  gap: 2rem; /* espaço entre os cards */
+  width: 90%;
+  margin: 0 auto;
 }
