--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 /* Padrão */
+body {
+  background-color: #fbefd8;
+
+}
 
 .container-fluid {
   margin: 0;
   padding: 0;
   font-family: Arial;
   box-sizing:border-box;
-  background-color: #fbefd8;
+
 }
 
 h1,
 h2,
 h3 {
   color: #333;
+  font-family: "Ubuntu", sans-serif;
 }
 
 p {
   color: #70747a;
+  font-family: "Ubuntu", sans-serif;
 }
 
 /* Barra de navegação */
@@ -95,4 +103,75 @@ nav {
   gap: 2rem; /* espaço entre os cards */
   width: 90%;
   margin: 0 auto;
+}
+
+
+/* Estilo geral da seção */
+.form-contato {
+  max-width: 600px;
+  margin: 50px auto;
+  padding: 30px;
+  background-color: #f9f9f9;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  font-family: 'Segoe UI', sans-serif;
+}
+
+/* Pagina Contato */
+
+/* Título */
+.form-contato h2 {
+  text-align: center;
+  margin-bottom: 25px;
+  color: #333;
+}
+
+/* Espaçamento entre campos */
+.mb-3 {
+  margin-bottom: 20px;
+}
+
+/* Labels */
+label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: 600;
+  color: #555;
+}
+
+/* Inputs e textarea */
+.form-control {
+  width: 100%;
+  padding: 10px 12px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 16px;
+  transition: border-color 0.3s ease;
+}
+
+.form-control:focus {
+  border-color: #f0ad4e;
+  outline: none;
+}
+
+/* Botão */
+.btn {
+  display: inline-block;
+  width: 100%;
+  padding: 12px;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn-warning {
+  background-color: #da8127;
+  color: #fff;
+}
+
+.btn-warning:hover {
+  background-color: #ec971f;
 }
